# Tinkwell-Firmwareless

./: .gitattributes  .gitignore  .gitmodules  README.md
Client/Source/Tinkwell.Firmwareless.Client/: Tinkwell.Firmwareless.Client.sln
Cloud/: README.md
Cloud/Documentation/: CLI.md  Compilation.md  README.md  Threat_Modeling.md
Cloud/Source/: Tinkwell.Firmwareless.Cloud.sln  azure.yml
Cloud/Source/Tests/: empty.wasm
Cloud/Source/Tinkkwell.Firmwareless/: FileTypeDetector.cs  ServiceCollectionExtensions.cs  Tinkkwell.Firmwareless.csproj  WebApplicationBuilderExtensions.cs  (+1 more)
Cloud/Tools/: runner.py  twless-admin-bootstrap.py  twless-base64-encode.py  twless-certificate-create.py  twless-firmware-download.py  twless-firmware-package.py  twless-firmware-upload.py  twless-firmware-validate.py  twless-product-create.py  twless-repository-get-public-key.py  twless-users-me.py  twless-vendor-create-key.py  twless-vendor-create.py  twless.ps1  twless.py  twless.sh
Device/Thermostat/device-runtime/src/components/networking/: CMakeLists.txt  Kconfig.projbuild  networking.c
Device/Thermostat/device-runtime/src/components/networking/config/: ethernet.conf
Device/Thermostat/device-runtime/src/components/networking/ethernet/: ethernet.h  ethernet_init.h  ethernet_init_internal.c  ethernet_init_openeth.c  ethernet_init_spi.c
Device/Thermostat/device-runtime/src/components/networking/include/: networking.h
Edge/: README.md
Edge/Documentation/: Overall_Architecture.md  README.md  System_Diagrams.md  Threat_Modeling.md
Edge/Source/: Tinkwell.Firmwareless.Client.sln
(+361 files in other folders)
